@@ -154,7 +154,13 @@ double_minimap_size = high-def
 ; page, it will automatically be divided into multiple with buttons added for navigation.
 allow_multipage_civilopedia_descriptions = true
 
-always_autoselect_nearby_units = true
+; Controls how the game searches for the next unit to autoselect. The possible choices are:
+;   standard: Base game behavior
+;   similar-near-start: The game will search for similar units near the starting point of the last selected unit. That means, when a unit is selected,
+;   the game remembers its location then searches out from there for a similar unit when cycling to the next one. Distance is prioritized over
+;   similarity, meaning the game will select all units on the starting tile no matter how dissimilar before any on nearby tiles.
+;   similar-near-destination: Like similar-near-start except the search goes outward from whatever tile the last selected unit was last on.
+unit_cycle_search_criteria = standard
 
 [====================]
 [=== OPTIMIZATION ===]
